# Imperial-Computing-Notes

./: .gitignore  LICENSE.md  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.md  issue_template.md  pull_request_template.md
.obsidian/: app.json  graph.json  workspace.json
50001 - Algorithm Analysis and Design/: 50001 - Algorithm Analysis and Design.tex  README.md
50003 - Models of Computation/: 50003 - Models of Computation.tex  README.md
50005 - Networks and Communications/: 50005 - Networks and Communications.tex  README.md
50006 - Compilers/: 50006 - Compilers.tex  README.md
50008 - Probability and Statistics/: 50008 - Probability and Statistics.tex  README.md
60001 - Advanced Computer Architecture/: 60001 - Advanced Computer Architecture.tex  README.md
60007 - Theory and Practice of Concurrent Programming/: 60007 - Theory and Practice of Concurrent Programming.tex  README.md
60008 - Custom Computing/: 60008 - Custom Computing.tex
60009 - Distributed Algorithms/: 60009 - Distributed Algorithms.tex  README.md
60017 - System Performance Engineering/: 60017 - System Performance Engineering.tex  README.md
60023 - Type Systems for Programming Languages/: 60023 - Type Systems for Programming Languages.tex  README.md
60029 - Data Processing Systems/: 60029 - Data Processing Systems.synctex(busy)  60029 - Data Processing Systems.tex  60029_-_Data_Processing_Systems.pyg  README.md
60029 - Data Processing Systems/advanced_topics/code/partition_comparison/: CMakeLists.txt  README.md  benchmarks.cpp  examples.cpp  in_place_conditional.h  in_place_predicated.h  out_of_place_conditional.h  out_of_place_predicated.h  test.cpp  tests.cpp
60029 - Data Processing Systems/advanced_topics/code/partition_comparison/partitions/: in_place_conditional.h  in_place_predicated.h  out_of_place_conditional.h  out_of_place_predicated.h
60029 - Data Processing Systems/algorithms_and_indices/code/bitmap_comparison/: .gitignore  CMakeLists.txt  README.md  benchmarks.cpp  bitmap.h  examples.cpp  tests.cpp
60029 - Data Processing Systems/algorithms_and_indices/code/bitmap_comparison/bitmaps/: bitvector.h  blocks.h  roaring.h
60029 - Data Processing Systems/algorithms_and_indices/code/join_comparison/: CMakeLists.txt  README.md  benchmarks.cpp  examples.cpp  generate.h  table.h  tests.cpp
60029 - Data Processing Systems/algorithms_and_indices/code/join_comparison/joins/: hash.h  nested_loop.h  sort_merge.h  unique_hash.h  unique_sort_merge.h
70004 - Advanced Computer Security/: 10 Years of Java Exploits.md  1975 Design Principles.md  4 Java Exploits.md  51% Attack.md  A Few Billion Lines of Code Later.md  Access Control List.md  Accountability.md  Acoustic Attacks.md  Ad-Blocking.md  Address Space Layout Randomisation.md  Android Platform Security.md  Authentication.md  Authorization.md  Availability.md  Bell-LaPadula Model.md  Biba Model.md  Blockchain Centralisation.md  Blockchain Fork.md  Blockchain.md  CVE-2007-3944.md  CVE-2012-1723.md  Common Language Runtime.md  Confidentiality.md  Coverity.md  Crypto-Currency.md  Data Execution Prevention.md  De-Obfuscation by Code Unfolding.md  Defence in Depth.md  Denial of Service.md  Drive By Malware.md  (+36 more)
(+1024 files in other folders)
